--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/dateformat": "^5.0.0"
   }
 }
